--- a/DirectX12Project/DirectX12Project/DirectX12Project.vcxproj.filters
+++ b/DirectX12Project/DirectX12Project/DirectX12Project.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="PMDLoder\PMDLoder.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="PMDLoder\VMDMotion.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h">
@@ -63,6 +66,9 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="PMDLoder\PMDLoder.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="PMDLoder\VMDMotion.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
