リファクタリング前

--- a/DirectX12Project/DirectX12Project/DirectX12Project.vcxproj
+++ b/DirectX12Project/DirectX12Project/DirectX12Project.vcxproj
@@ -155,7 +155,8 @@
     <ClCompile Include="PMDLoder\PMDLoder.cpp" />
     <ClCompile Include="Common\StrOperater.cpp" />
     <ClCompile Include="DirectX12\PMDResource.cpp" />
-    <ClCompile Include="PMDLoder\VMDMotion.cpp" />
+    <ClCompile Include="PMDLoder\VMDLoder.cpp" />
+    <ClCompile Include="DirectX12\TexManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
@@ -167,7 +168,8 @@
     <ClInclude Include="PMDLoder\PMDLoder.h" />
     <ClInclude Include="Common\StrOperater.h" />
     <ClInclude Include="DirectX12\PMDResource.h" />
-    <ClInclude Include="PMDLoder\VMDMotion.h" />
+    <ClInclude Include="PMDLoder\VMDLoder.h" />
+    <ClInclude Include="DirectX12\TexManager.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Shader\boardPS.hlsl">
