セルフシャドウ実装

--- a/DirectX12Project/DirectX12Project/DirectX12Project.vcxproj
+++ b/DirectX12Project/DirectX12Project/DirectX12Project.vcxproj
@@ -152,12 +152,15 @@
     <ClCompile Include="DirectX12\Dx12Wrapper.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="DirectX12\PMDActor.cpp" />
+    <ClCompile Include="DirectX12\mesh\PlaneMesh.cpp" />
     <ClCompile Include="PMDLoder\PMDLoder.cpp" />
     <ClCompile Include="Common\StrOperater.cpp" />
     <ClCompile Include="DirectX12\PMDResource.cpp" />
     <ClCompile Include="PMDLoder\VMDLoder.cpp" />
     <ClCompile Include="DirectX12\TexManager.cpp" />
     <ClCompile Include="DirectX12\Renderer.cpp" />
+    <ClCompile Include="DirectX12\mesh\PrimitiveMesh.cpp" />
+    <ClCompile Include="DirectX12\mesh\PrimitiveManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
@@ -166,12 +169,15 @@
     <ClInclude Include="Common.h" />
     <ClInclude Include="DirectX12\Dx12Wrapper.h" />
     <ClInclude Include="DirectX12\PMDActor.h" />
+    <ClInclude Include="DirectX12\mesh\PlaneMesh.h" />
     <ClInclude Include="PMDLoder\PMDLoder.h" />
     <ClInclude Include="Common\StrOperater.h" />
     <ClInclude Include="DirectX12\PMDResource.h" />
     <ClInclude Include="PMDLoder\VMDLoder.h" />
     <ClInclude Include="DirectX12\TexManager.h" />
     <ClInclude Include="DirectX12\Renderer.h" />
+    <ClInclude Include="DirectX12\mesh\PrimitiveMesh.h" />
+    <ClInclude Include="DirectX12\mesh\PrimitiveManager.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Shader\boardPS.hlsl">
@@ -189,6 +195,22 @@
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.1</ShaderModel>
       <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">VS</EntryPointName>
+    </FxCompile>
+    <FxCompile Include="Shader\PrimitivePS.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Pixel</ShaderType>
+      <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">PrimitivePS</EntryPointName>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.1</ShaderModel>
+    </FxCompile>
+    <FxCompile Include="Shader\PrimitiveVS.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
+      <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">PrimitiveVS</EntryPointName>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.1</ShaderModel>
     </FxCompile>
     <FxCompile Include="Shader\ps.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
