--- a/DirectX12Project/DirectX12Project/DirectX12Project.vcxproj
+++ b/DirectX12Project/DirectX12Project/DirectX12Project.vcxproj
@@ -148,7 +148,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(DXTEX_DIR)\Bin\Desktop_2019_Win10\x64\Release;$(EFK_DIR)\lib;$(DXTK12_DIR)\Bin\Desktop_2019_Win10\x64\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>Effekseer.lib;EffekseerRendererDX12.lib;LLGI.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Effekseer.lib;EffekseerRendererDX12.lib;LLGI.lib;DirectXTK12.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <FxCompile>
       <EntryPointName />
@@ -160,6 +160,7 @@
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="BMPLoder\BmpLoder.cpp" />
+    <ClCompile Include="Debug.cpp" />
     <ClCompile Include="DirectX12\Camera\Camera.cpp" />
     <ClCompile Include="DirectX12\Camera\cameraCtr.cpp" />
     <ClCompile Include="DirectX12\Dx12Wrapper.cpp" />
@@ -187,6 +188,7 @@
   <ItemGroup>
     <ClInclude Include="Application.h" />
     <ClInclude Include="BMPLoder\BmpLoder.h" />
+    <ClInclude Include="Debug.h" />
     <ClInclude Include="DirectX12\Camera\Camera.h" />
     <ClInclude Include="DirectX12\Camera\cameraCtr.h" />
     <ClInclude Include="Common.h" />
